--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,8 +30,7 @@ jobs:
         with:
           name: build-files
           path: .
-
-deploy-dev:
+  deploy-dev:
   if: github.ref == 'refs/heads/dev'
   needs: build
   runs-on: ubuntu-latest
@@ -50,23 +49,40 @@ deploy-dev:
         DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
 
 
-  deploy-uat:
-    if: github.ref == 'refs/heads/uat'
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: build-files
-      - run: echo "Deploying to UAT"
+deploy-uat:
+  if: github.ref == 'refs/heads/uat'
+  needs: build
+  runs-on: ubuntu-latest
+  environment: uat
+  steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: build-files
 
-  deploy-prod:
-    if: github.ref == 'refs/heads/main'
-    needs: build
-    runs-on: ubuntu-latest
-    environment: production
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: build-files
-      - run: echo "Deploying to PRODUCTION"
+    - name: Deploy to uat
+      run: |
+        echo "Deploying to $DEV_SERVER"
+        echo "Using token $DEPLOY_TOKEN"
+      env:
+        DEV_SERVER: ${{ secrets.UAT_SERVER }}
+        DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+
+
+deploy-prod:
+  if: github.ref == 'refs/heads/production'
+  needs: build
+  runs-on: ubuntu-latest
+  environment: production
+  steps:
+    - uses: actions/download-artifact@v4
+      with:
+        name: build-files
+
+    - name: Deploy to production
+      run: |
+        echo "Deploying to $DEV_SERVER"
+        echo "Using token $DEPLOY_TOKEN"
+      env:
+        DEV_SERVER: ${{ secrets.PROD_SERVER }}
+        DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+
