--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,17 @@
+name: CI Pipeline
+
+on:
+  push:
+    branches:
+      - dev
+      - uat
+      - main
+  pull_request:
+    branches:
+      - dev
+      - uat
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,7 +42,6 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: build-files
-
       - name: Deploy to Dev
         run: |
           echo "Deploying to $DEV_SERVER"
@@ -46,7 +59,6 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: build-files
-
       - name: Deploy to UAT
         run: |
           echo "Deploying to $UAT_SERVER"
@@ -55,20 +67,4 @@ jobs:
           UAT_SERVER: ${{ secrets.UAT_SERVER }}
           DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
 
-  deploy-prod:
-    if: github.ref == 'refs/heads/main'
-    needs: build
-    runs-on: ubuntu-latest
-    environment: production
-    steps:
-      - uses: actions/download-artifact@v4
-        with:
-          name: build-files
-
-      - name: Deploy to Production
-        run: |
-          echo "Deploying to $PROD_SERVER"
-          echo "Using token $DEPLOY_TOKEN"
-        env:
-          PROD_SERVER: ${{ secrets.PROD_SERVER }}
-          DEPLOY_TOKEN: ${{ secrets.DEPLOY_TOKEN }}
+  deploy-pro
