--- a/.github/workflows/check-wikis.yml
+++ b/.github/workflows/check-wikis.yml
@@ -17,25 +17,29 @@ jobs:
           GH_TOKEN: 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
         run: |
           echo "Fetching repositories..."
-
           page=1
           while : ; do
-            repos=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
+            response=$(curl -s -w "\n%{http_code}" -H "Authorization: Bearer $GH_TOKEN" \
               "https://api.github.com/orgs/$ORG_NAME/repos?per_page=100&page=$page")
-
-            count=$(echo "$repos" | jq '. | length')
+            
+            http_code=$(echo "$response" | tail -n1)
+            body=$(echo "$response" | head -n-1)
+            
+            if [ "$http_code" != "200" ]; then
+              echo "Error: HTTP $http_code"
+              echo "$body"
+              break
+            fi
+            
+            count=$(echo "$body" | jq '. | length')
             if [ "$count" -eq 0 ]; then
               break
             fi
-
-            echo "$repos" | jq -r '.[] | "\(.name) \(.has_wiki)"' | while read repo has_wiki; do
-              
+            
+            echo "$body" | jq -r '.[] | "\(.name) \(.has_wiki)"' | while read repo has_wiki; do
               if [ "$has_wiki" = "true" ]; then
-                wiki_url="https://api.github.com/repos/$ORG_NAME/$repo.wiki"
-
                 wiki_check=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
-                  "https://api.github.com/repos/$ORG_NAME/$repo.wiki")
-
+                  "https://api.github.com/repos/$ORG_NAME/$repo/wiki")
                 if echo "$wiki_check" | grep -q "Not Found"; then
                   echo "❌ $repo → Wiki enabled but EMPTY"
                 else
@@ -44,8 +48,6 @@ jobs:
               else
                 echo "❌ $repo → Wiki DISABLED"
               fi
-
             done
-
             page=$((page + 1))
           done
