--- a/.github/workflows/check-wikis.yml
+++ b/.github/workflows/check-wikis.yml
@@ -13,14 +13,14 @@ jobs:
 
       - name: Check Wiki Status
         env:
-          ORG_NAME: Harshad41 
+          USERNAME: Harshad41 
           GH_TOKEN: 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
         run: |
           echo "Fetching repositories..."
           page=1
           while : ; do
             response=$(curl -s -w "\n%{http_code}" -H "Authorization: Bearer $GH_TOKEN" \
-              "https://api.github.com/orgs/$ORG_NAME/repos?per_page=100&page=$page")
+              "https://api.github.com/users/$USERNAME/repos?per_page=100&page=$page")
             
             http_code=$(echo "$response" | tail -n1)
             body=$(echo "$response" | head -n-1)
@@ -39,7 +39,7 @@ jobs:
             echo "$body" | jq -r '.[] | "\(.name) \(.has_wiki)"' | while read repo has_wiki; do
               if [ "$has_wiki" = "true" ]; then
                 wiki_check=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
-                  "https://api.github.com/repos/$ORG_NAME/$repo/wiki")
+                  "https://api.github.com/repos/$USERNAME/$repo/wiki")
                 if echo "$wiki_check" | grep -q "Not Found"; then
                   echo "❌ $repo → Wiki enabled but EMPTY"
                 else
