--- a/.github/workflows/5.yml
+++ b/.github/workflows/5.yml
@@ -6,7 +6,6 @@ on:
 jobs:
   create-wikis:
     runs-on: ubuntu-latest
-
     steps:
       - name: Install dependencies
         run: |
@@ -26,7 +25,6 @@ jobs:
           while : ; do
             response=$(curl -s -w "\n%{http_code}" -H "Authorization: Bearer $GH_TOKEN" \
               "https://api.github.com/users/$USERNAME/repos?per_page=100&page=$page")
-
             http_code=$(echo "$response" | tail -n1)
             body=$(echo "$response" | head -n-1)
             
@@ -51,70 +49,63 @@ jobs:
                   -H "Authorization: Bearer $GH_TOKEN" \
                   -H "Accept: application/vnd.github+json" \
                   "https://api.github.com/repos/$USERNAME/$repo" \
-                  -d '{"wiki": true}' > /dev/null
-                
-                if [ $? -eq 0 ]; then
-                  echo "  ✅ Wiki enabled for $repo"
-                else
-                  echo "  ❌ Failed to enable wiki for $repo"
-                  continue
-                fi
+                  -d '{"wiki": true}' > /dev/null || true
+                echo "  ✅ Wiki enabled for $repo"
               fi
               
               wiki_git_url="https://github.com/$USERNAME/$repo.wiki.git"
               temp_dir=$(mktemp -d)
+              has_content=false
               
               if git clone --quiet --depth 1 "$wiki_git_url" "$temp_dir" 2>/dev/null; then
                 if find "$temp_dir" -maxdepth 1 -type f ! -name ".git" | grep -q .; then
-                  echo "  ✅ $repo → Wiki exists with content (SKIPPED)"
+                  echo "  ✅ $repo → Wiki exists (SKIPPED)"
                   ((total_skipped++))
-                else
-                  echo "  📝 $repo → Wiki empty, creating Home.md..."
+                  has_content=true
                 fi
-              else
-                echo "  📝 $repo → Wiki new/empty, creating Home.md..."
               fi
               
               rm -rf "$temp_dir"
               
-              if ! git clone --quiet --depth 1 "$wiki_git_url" "$temp_dir" 2>/dev/null || \
-                 ! find "$temp_dir" -maxdepth 1 -type f ! -name ".git" | grep -q .; then
+              if [ "$has_content" = "false" ]; then
+                echo "  📝 Creating wiki for $repo..."
+                temp_dir=$(mktemp -d)
+                
+                cat > "$temp_dir/Home.md" << EOF
+# $repo Wiki
 
-              file="$temp_dir/Home.md"
+## Quick Start
+- **Repository**: https://github.com/Harshad41/$repo
+- **Clone**: \`git clone https://github.com/Harshad41/$repo.git\`
 
-echo "# Welcome to the Repository Wiki" > "$file"
-echo "" >> "$file"
-echo "This wiki serves as documentation for the **$repo** repository." >> "$file"
-echo "" >> "$file"
-echo "## Quick Start" >> "$file"
-echo "" >> "$file"
-echo "- **Repository**: https://github.com/$USERNAME/$repo" >> "$file"
-echo "- **Purpose**: Add description here" >> "$file"
-echo "- **Tech Stack**: List technologies used" >> "$file"
-echo "" >> "$file"
-echo "## Table of Contents" >> "$file"
-echo "" >> "$file"
-echo "- [Getting Started](#getting-started)" >> "$file"
-echo "- [Deployment](#deployment)" >> "$file"
-echo "- [Configuration](#configuration)" >> "$file"
-echo "- [Troubleshooting](#troubleshooting)" >> "$file"
-echo "" >> "$file"
-echo "## Getting Started" >> "$file"
-echo "" >> "$file"
-echo "Add setup instructions here." >> "$file"
+## Contents
+- [Getting Started](#getting-started)
+- [Deployment](#deployment)
 
-cd "$temp_dir"
-git config user.name "github-actions"
-git config user.email "github-actions@github.com"
-git add Home.md
-git commit -m "Initialize wiki"
-git push
-((total_created++))
+*Generated: $(date)*
+EOF
 
-
+                cd "$temp_dir" || exit 1
+                git init
+                git config user.name "GitHub Actions"
+                git config user.email "actions@github.com"
+                git remote add origin "$wiki_git_url"
+                git checkout -b main || git checkout -b master
+                git add Home.md
+                git commit -m "Add initial Home.md"
+                git push -u origin main 2>/dev/null || git push -u origin master 2>/dev/null || echo "  ⚠️ Push failed"
+                
+                echo "  ✅ $repo → Wiki created!"
+                ((total_created++))
+                
+                cd ..
+                rm -rf "$temp_dir"
               fi
-
             done
-
+            
             page=$((page + 1))
           done
+          
+          echo ""
+          echo "=== SUMMARY ==="
+          echo "Created: $total_created | Skipped: $total_skipped"
