--- a/.github/workflows/6.yml
+++ b/.github/workflows/6.yml
@@ -1,11 +1,9 @@
 name: 6_working - Create Wikis (ARRAY FIXED)
-
 on:
   workflow_dispatch:
 
 permissions:
-  contents: write
-  metadata: read
+  contents: write  # ✅ Only this is needed for git push to wiki
 
 jobs:
   create-empty-wikis:
@@ -49,17 +47,21 @@ jobs:
             http_code=$(echo "$response" | tail -n1)
             body=$(echo "$response" | head -n-1)
             
-            [[ "$http_code" != "200" ]] && break
+            [[ "$http_code" != "200" ]] && { echo "❌ API Error: $http_code"; exit 1; }
             
             count=$(echo "$body" | jq '. | length')
             [[ "$count" -eq 0 ]] && break
 
-            # Process each repo
-            echo "$body" | jq -r '.[] | "\(.name) \(.has_wiki)"' | while read -r repo has_wiki; do
+            # Process each repo - FIXED ARRAY POPULATION
+            while IFS= read -r line; do
+              [[ -z "$line" ]] && continue
+              repo=$(echo "$line" | awk '{print $1}')
+              has_wiki=$(echo "$line" | awk '{print $2}')
+              
               if [[ "$has_wiki" == "false" ]]; then
                 echo "📝 $repo → Wiki DISABLED (SKIPPING as requested)"
               elif [[ "$has_wiki" == "true" ]]; then
-                # Check if wiki is actually empty/inaccessible
+                # Check if wiki is actually empty
                 wiki_url="https://github.com/$USERNAME/$repo.wiki.git"
                 if ! git ls-remote --exit-code --heads "$wiki_url" >/dev/null 2>&1; then
                   echo "📝 $repo → Wiki enabled but EMPTY/INACCESSIBLE (will create)"
@@ -68,44 +70,38 @@ jobs:
                   echo "✅ $repo → Wiki exists with content (SKIPPING)"
                 fi
               fi
-            done
+            done < <(echo "$body" | jq -r '.[] | "\(.name) \(.has_wiki)"')
+
             ((page++))
           done
 
-          # Convert associative array to normal array
-          needs_wiki_array=()
-          for repo in "${!needs_wiki[@]}"; do
-            needs_wiki_array+=("$repo")
-          done
-
+          # Convert to normal array
+          needs_wiki_array=("${!needs_wiki[@]}")
           echo ""
           echo "📊 Found ${#needs_wiki_array[@]} repositories needing wikis: ${needs_wiki_array[*]}"
           
-          # CREATE WIKIS
+          # CREATE WIKIS FOR EMPTY REPOS ONLY
           for repo in "${needs_wiki_array[@]}"; do
             echo ""
             echo "🔄 Creating wiki for $repo..."
             
-            # Setup git
             TEMP_DIR=$(mktemp -d)
             cd "$TEMP_DIR"
             
             git init
-            git checkout -b main
+            git checkout -b main || true
             git config user.name "GitHub Actions"
             git config user.email "actions@github.com"
             
-            # Create Home.md
             echo "$HOME_MD" > Home.md
             git add Home.md
             git commit -m "Add initial Home.md via GitHub Actions"
             
-            # Push to wiki
             git remote add origin "https://x-access-token:$GH_TOKEN@github.com/$USERNAME/$repo.wiki.git"
-            if git push -u origin main 2>/dev/null; then
+            if git push -u origin main; then
               echo "✅ $repo → Wiki created with Home.md"
             else
-              echo "❌ $repo → Failed to push wiki"
+              echo "❌ $repo → Push failed"
             fi
             
             cd ..
@@ -114,3 +110,4 @@ jobs:
 
           echo ""
           echo "🎉 Wiki creation complete!"
+
