--- a/.github/workflows/5.yml
+++ b/.github/workflows/5.yml
@@ -1,141 +1,99 @@
-name: 5 - Create Wikis (Fixed)
+name: 3 - Create Wikis (ARRAY FIXED FOREVER)
 
 on:
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
-  create-missing-wikis:
+  create-empty-wikis:
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq git curl
+      - name: Install tools
+        run: sudo apt-get update -qq && sudo apt-get install -y jq git curl
 
-      - name: Check & Create Wikis
+      - name: Create Wikis for EMPTY Repos ONLY
         env:
           USERNAME: Harshad41
-          GH_TOKEN: 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
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
-          # Standard wiki Home.md template
-          HOME_MD_CONTENT=$(cat << 'EOF'
+          echo "🔍 Scanning repositories..."
+
+          # Wiki template
+          HOME_MD=$(cat << 'EOF'
           # Welcome to the Repository Wiki
-
-          This wiki contains documentation, guides, and resources for this project.
-
-          ## Quick Navigation
+          
+          This wiki contains project documentation and guides.
+          
+          ## Navigation
           - [Getting Started](Getting-Started)
           - [Configuration](Configuration)
           - [Troubleshooting](Troubleshooting)
-          - [FAQ](FAQ)
-
-          ## Recent Updates
-          **Last updated:** $(date +%Y-%m-%d)
+          
+          **Updated:** $(date +%Y-%m-%d)
           EOF
           )
 
-          page=1
+          # SIMPLE ARRAY - NO PIPE ISSUES
           needs_wiki=()
-          
-          echo "🔍 Scanning repositories..."
-          
-          # Phase 1: Identify repos needing wikis
-          while : ; do
-            response=$(curl -s -w "\n%{http_code}" -H "Authorization: Bearer $GH_TOKEN" \
-              "https://api.github.com/users/$USERNAME/repos?per_page=100&page=$page")
-            http_code=$(echo "$response" | tail -n1)
-            body=$(echo "$response" | head -n-1)
-            
-            [[ "$http_code" != "200" ]] && { echo "❌ API Error: $http_code"; exit 1; }
-            
-            count=$(echo "$body" | jq '. | length')
-            [[ "$count" -eq 0 ]] && break
 
-            echo "$body" | jq -r '.[] | "\(.name) \(.has_wiki)"' | while read -r repo has_wiki; do
-              if [[ "$has_wiki" == "false" ]]; then
-                echo "📝 $repo → Wiki DISABLED (will create)"
+          # Get ALL repos in one call
+          repos_json=$(curl -s \
+            -H "Authorization: token $GH_TOKEN" \
+            "https://api.github.com/users/$USERNAME/repos?per_page=100")
+
+          # Process repos DIRECTLY (no pipes!)
+          echo "$repos_json" | jq -r '.[] | "\(.name),\(.has_wiki)"' | while IFS=',' read -r repo has_wiki; do
+            if [[ "$has_wiki" == "false" ]]; then
+              echo "📝 $repo → Wiki DISABLED (SKIPPING as requested)"
+            elif [[ "$has_wiki" == "true" ]]; then
+              # Test wiki existence with ls-remote (fast)
+              wiki_url="https://github.com/$USERNAME/$repo.wiki.git"
+              if ! git ls-remote --exit-code --heads "$wiki_url" >/dev/null 2>&1; then
+                echo "📝 $repo → Wiki enabled but EMPTY/INACCESSIBLE (will create)"
                 needs_wiki+=("$repo")
-              elif [[ "$has_wiki" == "true" ]]; then
-                # Test wiki content accessibility
-                wiki_url="https://github.com/$USERNAME/$repo.wiki.git"
-                temp_dir=$(mktemp -d)
-                if ! git ls-remote --exit-code --heads "$wiki_url" >/dev/null 2>&1; then
-                  echo "📝 $repo → Wiki enabled but EMPTY/INACCESSIBLE (will create)"
-                  needs_wiki+=("$repo")
-                elif ! git clone --quiet --depth 1 "$wiki_url" "$temp_dir" 2>/dev/null; then
-                  echo "📝 $repo → Wiki enabled but EMPTY/INACCESSIBLE (will create)"  
-                  needs_wiki+=("$repo")
-                else
-                  if ! find "$temp_dir" -mindepth 1 -maxdepth 1 -type f | grep -q .; then
-                    echo "📝 $repo → Wiki enabled but EMPTY (will create)"
-                    needs_wiki+=("$repo")
-                  else
-                    echo "✅ $repo → Wiki exists with content (SKIPPING)"
-                  fi
-                fi
-                rm -rf "$temp_dir"
+              else
+                echo "✅ $repo → Wiki exists with content (SKIPPING)"
               fi
-            done
-            ((page++))
+            fi
           done
 
           echo ""
           echo "📊 Found ${#needs_wiki[@]} repositories needing wikis"
           
-          # Phase 2: Create wikis
+          # CREATE WIKIS
           for repo in "${needs_wiki[@]}"; do
-            echo ""
             echo "🔄 Creating wiki for $repo..."
             
-            # Ensure wiki is enabled
-            repo_info=$(curl -s -H "Authorization: Bearer $GH_TOKEN" \
-              "https://api.github.com/repos/$USERNAME/$repo")
-            current_wiki=$(echo "$repo_info" | jq -r '.has_wiki')
+            # Create temp dir and init git
+            TEMP_DIR=$(mktemp -d)
+            cd "$TEMP_DIR"
+            git init
+            git checkout -b main
             
-            if [[ "$current_wiki" == "false" ]]; then
-              echo "   → Enabling wiki feature..."
-              curl -X PATCH -H "Authorization: Bearer $GH_TOKEN" \
-                -H "Accept: application/vnd.github+json" \
-                -d '{"has_wiki": true}' \
-                "https://api.github.com/repos/$USERNAME/$repo" >/dev/null
-              sleep 5  # Wait for GitHub to provision wiki repo
-            fi
-
-            # Create Home.md content
-            git config --global user.name "GitHub Actions Bot"
-            git config --global user.email "actions@github.com"
-
-            wiki_dir=$(mktemp -d)
-            wiki_url="https://$USERNAME@github.com/$USERNAME/$repo.wiki.git"
+            # Config
+            git config user.name "GitHub Actions"
+            git config user.email "actions@github.com"
             
-            # Clone or init wiki repo
-            if git clone "https://github.com/$USERNAME/$repo.wiki.git" "$wiki_dir" 2>/dev/null; then
-              cd "$wiki_dir"
-            else
-              cd "$wiki_dir"
-              git init
-              git remote add origin "$wiki_url"
-              git checkout -b main || git checkout main
-            fi
-
-            # Create Home.md only if missing
-            if [[ ! -f "Home.md" ]]; then
-              echo "${HOME_MD_CONTENT//\$/\\$}" > Home.md
-              git add Home.md
-              git commit -m "feat: add initial Home page via GitHub Actions [skip ci]"
-              
-              # Force push to main branch
-              git push -u origin main --force-with-lease 2>/dev/null || \
-              git push -u origin main 2>/dev/null
-              
+            # Create Home.md
+            echo "$HOME_MD" > Home.md
+            git add Home.md
+            git commit -m "Add initial Home.md"
+            
+            # Push to wiki
+            git remote add origin "https://x-access-token:$GH_TOKEN@github.com/$USERNAME/$repo.wiki.git"
+            if git push -u origin main; then
               echo "✅ $repo → Wiki created with Home.md"
             else
-              echo "⚠️  $repo → Wiki already has Home.md (skipped)"
+              echo "❌ $repo → Push failed (wiki may still be initializing)"
+              sleep 3
+              git push -u origin main --force || echo "⚠️  Retry failed"
             fi
             
             cd ..
-            rm -rf "$wiki_dir"
+            rm -rf "$TEMP_DIR"
+            echo ""
           done
 
-          echo ""
           echo "🎉 Wiki creation complete!"
